# monitor_and_control

./: .gitignore  AUDIT_FIXES_SUMMARY.md  AUDIT_REPORT.md  CODEBASE_ANALYSIS.md  LICENSES_bundled  Makefile  Makefile.in  PR_DESCRIPTION.md  README.md  configure  configure.ac  makefile
.github/workflows/: main.yml
Documentation/: MCS_Commands.md
Documentation/MCS_Common_ICD/: MCS_Common_ICD.tex
Documentation/MCS_Common_ICD/appendices/: appendix-a.tex
Documentation/MCS_Common_ICD/config/: macros.tex  metadata.tex  packages.tex
Documentation/MCS_Common_ICD/frontmatter/: revisions.tex
Documentation/MCS_Common_ICD/sections/: 01-introduction.tex  02-summary.tex  03-mib.tex  04-message-structure.tex  05-message-types.tex  06-examples.tex
Documentation/MCS_Observing/: MCS_Observing.tex
Documentation/MCS_Observing/appendices/: appendix-a.tex  appendix-b.tex
Documentation/MCS_Observing/config/: macros.tex  metadata.tex  packages.tex
Documentation/MCS_Observing/frontmatter/: revisions.tex
Documentation/MCS_Observing/sections/: 01-introduction.tex  02-definitions.tex  03-process.tex  04-sdf-format.tex  05-session-spec.tex  06-obs-spec.tex  07-session-metadata.tex
Documentation/MCS_StationMIB/: MCS_StationMIB.tex  lwa-icd-memo.cls
Documentation/MCS_StationMIB/appendices/: appendix-a.tex  appendix-b.tex  example-ssmif.txt
Documentation/MCS_StationMIB/config/: macros.tex  metadata.tex  packages.tex
Documentation/MCS_StationMIB/frontmatter/: revisions.tex
Documentation/MCS_StationMIB/sections/: 01-introduction.tex  02-ssmif-format.tex  03-sdm-format.tex
common/: config.h.in  fileutils.h  mcs.h
exec/: Makefile  Makefile.in  README.md  ephem_aberration.c  ephem_astro.h  ephem_deflect.c  ephem_deltat.c  ephem_eq_ecl.c  ephem_mjd.c  ephem_moon.c  ephem_nutation.c  ephem_obliq.c  ephem_parallax.c  ephem_precess.c  ephem_sphcart.c  ephem_sun.c  ephem_utc_gst.c  ephem_vsop87.c  ephem_vsop87.h  ephem_vsop87_data.c  makefile  me.h  me_astro.h  me_crash.sh  me_exec.c  me_exec_1.c  me_findjov.c  me_findjov_x.c  me_findlun.c  me_findlun_x.c  me_findsol.c  me_findsol_x.c  me_getaltaz.c  me_getaltaz_x.c  me_geteop.c  me_getlst.c  me_getlst_x.c  me_init.c  me_inproc.c  me_mon.c  (+23 more)
exec/tests/: test_celestial.py  test_solar_system.py
python/: Makefile  Makefile.in  config.py.in  requirements.txt  setup.py
python/lwa_mcs/: __init__.py  _mcs.c  _mcs.pyi  config.py  exc.py  mib.py  sch.py  tp.py  utils.py
python/tests/: test_utils.py
sch/: Makefile  Makefile.in  README.md  dat2dbm.c  makefile  mch_minimal_server.py  mch_minimal_server_acceptall.py  md.sh  ms_exec.c  ms_exec_log.c  ms_exec_replay.c  ms_init.c  ms_init_replay.c  ms_makeMIB_ADP.c  ms_makeMIB_ASP.c  ms_makeMIB_DP.c  ms_makeMIB_DR.c  ms_makeMIB_NDP.c  ms_makeMIB_SHL.c  ms_mb.c  ms_mb_ASP_annotate0.cfg  ms_mb_ASP_template0.cfg  ms_mb_DP_annotate0.cfg  ms_mb_DP_annotate1.cfg  ms_mb_DP_template1.cfg  ms_mb_DRn_annotate0.cfg  ms_mb_DRn_annotate3.cfg  ms_mb_DRn_template0.cfg  ms_mb_DRn_template1.cfg  ms_mb_DRn_template2.cfg  ms_mb_DRn_template3.cfg  ms_mb_DRn_template4.cfg  ms_mb_NDP_template0.cfg  ms_mb_NDP_template1.cfg  ms_mb_NUx_annotate.cfg  ms_mb_NUx_template.cfg  ms_mb_SHL_annotate0.cfg  ms_mb_SHL_annotate1.cfg  ms_mb_SHL_template0.cfg  ms_mb_SHL_template1.cfg  (+29 more)
sch/gfiles/: default.gft
sch/tests/: test_scheduler.py
services/: Makefile  makefile  mcs-exec  mcs-exec.service  mcs-sch  mcs-sch.service
share/: lwa_mcs.pc.in
sofa/src/: dat.c  makefile.in  t_sofa_c
tp/: Makefile  Makefile.in  README.md  makefile  mt.h  tpms.c  tprcs.c  tprs.c  tprs1.c  tpsdm.c  tpss.c  tpss0.c  tpss1.c  tpss2.c  tpss3.c  tpss4.c  tpss5.c  tptc.c
tp/test/: sdf_test1.txt  sdf_test2.txt  sdf_test3.txt  sdf_test4.txt  sdf_test5.txt
utils/: Makefile.in  build_station_start.c  test_sch_connection.c  test_tp_connection.c
